# dd-kable-analysis

./: .gitignore  LICENSE  README.md  pyproject.toml
analyses/behavioral_data_exploration/: response_time_exploration.ipynb
analyses/beta_series_analysis/: beta_series_analysis_code_dev.ipynb  qa_analysis_output.ipynb  qa_design_matrices.ipynb  qa_output.py  run_beta_series.py  submit_beta_series.sh
analyses/beta_series_analysis/subject_lists/: vif_gt_5.csv
analyses/bold_data_exploration/: check_scanner_warmup_volumes.ipynb
analyses/define_inclusion_criteria/: define_inclusion_criteria.ipynb  define_inclusion_criteria_utils.py
analyses/group_mask/: make_group_mask.ipynb  make_individual_masks_pdf.py  run_make_individual_masks_pdf.batch
analyses/ll_ss_group_model_comparison/: accept_minus_reject_individual_run_comparison.ipynb  accept_reject_group_comparison.ipynb
analyses/traditional_model_analysis/: model_code_dev.ipynb  qa_analysis_output.ipynb  run_traditional_model.py  submit_traditional_model.sh
analysis_registry/: README.md  build_master_registry.py  master_registry.yaml
analysis_registry/analyses/: behavioral_data_exploration.yaml  beta_series_analysis.yaml  bold_data_exploration.yaml  define_inclusion_criteria.yaml  group_mask.yaml  ll_ss_group_model_comparison.yaml  mvpa_value_decoding_ho_subcort_rois.yaml  mvpa_value_decoding_josh_rois.yaml  mvpa_value_decoding_pauli_subcort_rois.yaml  mvpa_value_decoding_schaefer_rois.yaml  traditional_model_analysis.yaml
src/dd_kable_analysis/: __init__.py  config_loader.py  data_io.py
(+23 files in other folders)
