[project]
name = "dd-kable-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "jmumford", email = "jmumford@stanford.edu" }
]
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "nibabel>=5.3.3",
    "nilearn>=0.12.1",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
    "seaborn>=0.13.2",
    "typing>=3.10.0.0",
    "vif-for-contrasts",
]

[project.scripts]
dd-kable-analysis = "dd_kable_analysis:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
vif-for-contrasts = { git = "https://github.com/jmumford/vif_contrasts.git" }


[tool.ruff]
extend-include = ["*.ipynb"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
extend-select = ["E501", "W", "N", "R", "I"]
ignore = ["F401"]  # allow unused imports

[tool.ruff.lint.pydocstyle]
convention = "numpy"
